<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Material Everywhere</string>
    <string name="default_color">Default</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="purple">Purple</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="clickable_card">Clickable card</string>
</resources>